fix initial visibility of strike fragments #737

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -121,6 +121,7 @@ body {
 
 .reveal .slides section .fragment.strike {
 	opacity: 1;
+	visibility: visible;
 
 	&.visible {
 		text-decoration: line-through;
